--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,9 @@
-body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-}
+@import url('../vendor/normalize.css');
+@import url('../vendor/fonts.css');
+@import url('../blocks/footer.css');
+@import url('../blocks/header.css');
+@import url('../blocks/intro.css');
+@import url('../blocks/lead.css');
+@import url('../blocks/page.css');
+
+
